# sophys-live-view

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: testing.yml
src/sophys_live_view/: main.py
src/sophys_live_view/utils/: bluesky_data_source.py  data_source.py  data_source_manager.py  json_data_source.py  kafka_data_source.py  thread_utils.py
src/sophys_live_view/widgets/: __init__.py  interfaces.py  main_window.py  metadata_viewer.py  plot_actions.py  plot_configuration.py  plot_display.py  run_selector.py  signal_selector.py
tests/: conftest.py  test_benchmark.py  test_environment_qt5_python3.10.yml  test_environment_qt5_python3.11.yml  test_environment_qt6_python3.12.yml  test_environment_qt6_python3.13.yml  test_environment_qt6_python3.14.yml
tests/runs/: count_with_rand.json  grid_with_det.json  grid_with_rand.json  scan_with_det.json  scan_with_rand.json  scan_with_rand_offset.json
tests/utils/: test_data_source.py
tests/widgets/: test_metadata_viewer.py  test_plot_actions.py  test_plot_display.py  test_run_selector.py  test_signal_selector.py
